# play-with-halide

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindHalide.cmake
examples/: CMakeLists.txt
examples/blur/: CMakeLists.txt  halide_blur_generator.cpp  test.cpp
examples/pyramid/: CMakeLists.txt  pyramid_generator.cpp
examples/resize/: CMakeLists.txt
examples/wavelet/: CMakeLists.txt
scripts/: build-halide.sh  build.sh
tutorial/: lesson_08_scheduling_2.cpp
tutorials/: CMakeLists.txt
tutorials/src/: lesson01.cpp  lesson02.cpp  lesson03.cpp  lesson04.cpp  lesson05-perf.cpp  lesson05.cpp  lesson06.cpp  lesson07.cpp  lesson08.cpp  lesson10.cpp  lesson10_generate.cpp  lesson16.cpp  lesson16_generate.cpp  lesson16_image.cpp
utils/: CMakeLists.txt
utils/include/: utils.h
utils/src/: utils.cpp
